<resources>
    <string name="app_name">Coffee</string>
    <dimen name="number_pin">64dp</dimen>
    <string name="supabase_url">https://xenkjiywsgjtgtiyfwxg.supabase.co</string>
    <string name="supabase_anon_key">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhlbmtqaXl3c2dqdGd0aXlmd3hnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDcxMDkwMzEsImV4cCI6MjA2MjY4NTAzMX0.DkEOCkk34vyLZiJq7ivhU0XUIT8l7Z7pu7pP21TF2XU</string>
    <string name="buttonCartText">Checkout</string>
    <string name="totalPrice">Total Price</string>
    <string name="myCart">My Cart</string>
    <string name="Details">Details</string>
    <string name="Americano">Americano</string>
    <string name="Cappuccino">Cappuccino</string>
    <string name="Mocha">Mocha</string>
    <string name="Flat">Flat White</string>
    <string name="shot">shot</string>
    <string name="single">single</string>
    <string name="doubl">double</string>
    <string name="Select">Select</string>
    <string name="Size">Size</string>
    <string name="Ice">Ice</string>
    <string name="TotalAmount">Total Amount: $3.00</string>
    <string name="OrdinaryCoffeeHouse">Ordinary Coffee House</string>
    <string name="MyOrders">My Orders</string>
    <string name="Ongoing">Ongoing</string>
    <string name="History">History</string>
    <string name="OrderSuccess">Order Success</string>
    <string name="YourOrderSuccessfully">Your order has been placed successfully.\nFor more details, go to my orders.</string>
    <string name="TrackMyOrderButton">Track My Order</string>
    <string name="AddressChange">Address change</string>
    <string name="HintNewAddress">New address</string>
    <string name="ConfirmButton">Confirm</string>
    <string name="EmailChange">Email change</string>
    <string name="HintNewEmail">New email</string>
    <string name="NameChange">Name change</string>
    <string name="HintNewName">New name</string>
    <string name="PasswordChange">Password change</string>
    <string name="HintPassword">Password</string>
    <string name="OrderConfirmation">Order Confirmation</string>
    <string name="DeliveryAddress">Delivery Address</string>
    <string name="HintEnterDeliveryAddress">Enter delivery address</string>
    <string name="PaymentMethod">Payment Method"</string>
    <string name="CashOnDelivery">Cash on Delivery</string>
    <string name="CreditCard">Credit Card</string>
    <string name="Subtotal">Subtotal</string>
    <string name="DeliveryFee">Delivery Fee</string>
    <string name="Total">Total</string>
    <string name="PayNowButton">Pay Now</string>
    <string name="Filters">Filters</string>
    <string name="Reset">Reset</string>
    <string name="Category">Category</string>
    <string name="AllCoffee">All coffee</string>
    <string name="BlackCoffee">Black coffee</string>
    <string name="MilkCoffee">Milk coffee</string>
    <string name="PriceRange">Price Range</string>
    <string name="price_1">1$</string>
    <string name="price_10">10$</string>
    <string name="ContinuButton">Continue</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="EnterEmail">Enter your email address</string>
    <string name="HintEmailAddress">Email address</string>
    <string name="cartParams">single | iced | medium | full ice</string>
    <string name="preparing">preparing</string>
    <string name="DelAddress">3 Addersion Court Chino Hills, HO56824, United State</string>
    <string name="LoyaltyCard">Loyalty card</string>
    <string name="ChooseYourCoffee">Choose your coffee</string>
    <string name="OnboardTitle1">Be free with our coffee</string>
    <string name="Onboard1">The best grain, the finest roast, the most powerful flavor.</string>
    <string name="OnboardTitle2">Making your days with our coffee.</string>
    <string name="Onboard2">Discover unique flavors.</string>
    <string name="OnboardTitle3">Your taste, your rules.</string>
    <string name="Onboard3">Always fresh, always perfect.</string>
    <string name="Verification">Verification</string>
    <string name="EnterOTP">Enter the OTP code we sent you</string>
    <string name="PINCODE">PIN CODE</string>
    <string name="EnterPIN">Enter the PIN code</string>
    <string name="Profile">Profile</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Adress">Adress</string>
    <string name="Rewards">Rewards</string>
    <string name="MyPoints">My Points: \n </string>
    <string name="RewardHistory">Reward History</string>
    <string name="Signin">Sign in</string>
    <string name="WelcomeBack">Welcome back</string>
    <string name="NewMember">New member?</string>
    <string name="Signup">Sign up</string>
    <string name="CreateAccount">Create an account here</string>
    <string name="HintUserName">UserName</string>
    <string name="terms">By signing up you agree with our Terms of Use</string>
    <string name="AlreadyMember">Already a member?</string>
    <string name="bottomHome">Home</string>
    <string name="bottomRewards">Rewards</string>
    <string name="bottomOrders">Orders</string>
    <string name="PleaseSelectPaymentMethod">Please select payment method</string>
    <string name="PleaseEnterDeliveryAddress">Please enter delivery address</string>
    <string name="PleaseEnterYourAddress">Please enter your address</string>
    <string name="PleaseEnterNewName">Please enter your new name</string>
    <string name="PleaseEnterAndConfirmNewPassword">Please enter and confirm your new password</string>
    <string name="PasswordsDoNotMatch">Passwords do not match</string>
    <string name="PleaseEnterAvalidEmail">Please enter a valid email</string>
    <string name="OTPSend">OTP sent to your email</string>
    <string name="OTPDontSend">Failed to send OTP</string>
    <string name="SessionExpired">Session expired. Please sign in again</string>
    <string name="PleaseEnterAvalidOTPCode">Please enter a valid 6-digit code</string>
    <string name="InvalidOTPCode">Invalid OTP code</string>
    <string name="CREATEPIN">CREATE PIN</string>
    <string name="CONFIRMPIN">CONFIRM PIN</string>
    <string name="ReEnterYourPIN">Re-enter your PIN to confirm</string>
    <string name="AllFieldsAreRequired">All fields are required</string>
    <string name="GoodMorning">Good Morning</string>
    <string name="GoodEvening">Good Evening</string>
    <string name="GoodAfternoon">Good Afternoon</string>
</resources>