<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OrderConfirmation"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DeliveryAddress"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delivery_icon"
            android:background="#F7F8FB"
            android:layout_marginRight="10dp"
            android:scaleType="fitXY"/>
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/HintEnterDeliveryAddress"
            android:padding="12dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PaymentMethod"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/rgPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/rbCash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CashOnDelivery"
            android:background="#F7F8FB"
            android:drawableRight="@drawable/cash_icon"
            android:fontFamily="@font/poppins_medium"/>

        <RadioButton
            android:id="@+id/rbCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreditCard"
            android:background="#F7F8FB"
            android:drawableRight="@drawable/visa_icon"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="8dp"/>
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EEEEEE"
        android:layout_marginVertical="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Subtotal"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:id="@+id/tvSubtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:fontFamily="@font/poppins_medium"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DeliveryFee"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:id="@+id/tvDeliveryFee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:fontFamily="@font/poppins_medium"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Total"
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:fontFamily="@font/poppins_medium"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnPayNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PayNowButton"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="12dp"/>
</LinearLayout>