<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/order_success_icon"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OrderSuccess"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/YourOrderSuccessfully"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:gravity="center"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnTrackOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TrackMyOrderButton"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="12dp"/>
</LinearLayout>