<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="24 June | 12:30 PM"
                android:fontFamily="@font/poppins_medium"/>

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$3.00"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_medium"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Americano"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DelAddress"
            android:textColor="#666"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preparing"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/poppins_medium"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>