<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        android:onClick="BackToSignIn"
        android:backgroundTint="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Signup"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CreateAccount"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:layout_gravity="left"
        android:textColor="@color/gray"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:padding="12dp">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/profile_icon"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UserNameSignUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/colorPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserNameSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintUserName"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@drawable/email_icon"
            android:layout_marginEnd="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayoutSignUP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/colorPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintEmailAddress"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/password_icon"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordSignUp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintPassword"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/password_icon"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordSignUP2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintPassword"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="12sp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AlreadyMember"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/SignInOnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Signin"
        android:layout_marginLeft="8dp"
        android:onClick="SignInClick"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_marginTop="30dp"
        android:id="@+id/nextButton4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_btn"
        android:src="@drawable/arrow_next"
        android:gravity="center"
        android:text=""
        android:layout_gravity="bottom|right"/>

</LinearLayout>