<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/backProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:onClick="BackProfile"
            android:layout_gravity="start"
            android:backgroundTint="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NameChange"
            android:textColor="#222222"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="60dp"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/profile_icon"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="5dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/HintNewName"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPersonName"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeNameButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/ConfirmButton"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:background="@drawable/oval_btn" />
</LinearLayout>