<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rewards"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary"
                android:padding="16dp"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/LoyaltyCard"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/loyaltyProgressText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1 / 8"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:layout_marginStart="185dp"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:background="@color/white"
                    android:id="@+id/loyaltyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:id="@+id/myPointsText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/MyPoints"
            android:textSize="18sp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="16dp"
            android:drawableEnd="@drawable/img"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RewardHistory"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rewardHistoryRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="8dp"
        android:background="@color/white"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@drawable/bottom_nav_color_selector"
        app:itemTextColor="@drawable/bottom_nav_color_selector"/>
</RelativeLayout>